--- a/exercicios/Aula 6/assets/ex3.css
+++ b/exercicios/Aula 6/assets/ex3.css
@@ -52,9 +52,7 @@ p {
     text-align: left;
 }
 .color-VERMELHO:hover {
-    color: black;
-    background: white;
-    text-align: left;
+   c
 }
 .color-azul:hover {
     color: black;
